--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#009688</color>
+    <color name="colorAccent">#ffa000</color>
+    <color name="colorMap">#0277bd</color>
+    <color name="colorInformation">#e57373</color>
+    <color name="colorInformationOpacity">#80e57373</color>
+    <color name="colorTestingAccent">#03a9f4</color>
+    <color name="titleColor">#707a79</color>
+    <color name="separatorColor">#cecece</color>
+    <color name="textColor">#9e9e9e</color>
 </resources>
