--- a/app/app/src/main/res/layout/fragment_fast.xml
+++ b/app/app/src/main/res/layout/fragment_fast.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FastFragment"
+    tools:context=".fragments.FastFragment"
     android:background="#ffffff"
     android:orientation="vertical">
 
