--- a/app/app/src/main/res/layout/fragment_testing.xml
+++ b/app/app/src/main/res/layout/fragment_testing.xml
@@ -6,86 +6,98 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
-        <ImageView
-            android:id="@+id/testingBackground"
+    <ImageView
+        android:id="@+id/testingBackground"
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:contentDescription="@string/testing_fragment"
+        android:src="@drawable/testing_background"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/testingBackground"
+        android:layout_marginTop="-50dp">
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="350dp"
-            android:contentDescription="@string/testing_fragment"
-            android:src="@drawable/testing_background"
-            android:adjustViewBounds="true"
-            android:scaleType="fitXY" />
+            android:layout_height="wrap_content"
+            android:paddingBottom="20dp">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/test_somebody_card"
-            android:layout_width="260dp"
-            android:layout_height="230dp"
-            android:layout_below="@id/testingBackground"
-            android:layout_centerHorizontal="true"
-            app:cardCornerRadius="8dp"
-            android:padding="12dp"
-            android:layout_marginTop="-50dp"
-            android:onClick="goToOtherTest">
+            <androidx.cardview.widget.CardView
+                android:id="@+id/test_somebody_card"
+                android:layout_width="260dp"
+                android:layout_height="230dp"
+                android:layout_centerHorizontal="true"
+                app:cardCornerRadius="8dp"
+                android:padding="12dp"
+                android:onClick="goToOtherTest">
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="14dp">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="160dp"
-                    android:layout_gravity="center|top"
-                    android:src="@drawable/somebody_else_testing"
-                    android:contentDescription="@string/testing_fragment"/>
-
-                <TextView
-                    android:id="@+id/test_somebody_text"
+                <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="@string/test_somebody_title"
-                    android:gravity="center|bottom"
-                    android:textColor="@color/titleColor"
-                    android:textSize="16sp"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
+                    android:padding="14dp">
 
-            </FrameLayout>
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="160dp"
+                        android:layout_gravity="center|top"
+                        android:src="@drawable/somebody_else_testing"
+                        android:contentDescription="@string/testing_fragment"/>
 
-        </androidx.cardview.widget.CardView>
+                    <TextView
+                        android:id="@+id/test_somebody_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="@string/test_somebody_title"
+                        android:gravity="center|bottom"
+                        android:textColor="@color/titleColor"
+                        android:textSize="16sp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/test_yourself_card"
-            android:layout_width="260dp"
-            android:layout_height="230dp"
-            android:layout_below="@id/test_somebody_card"
-            android:layout_centerHorizontal="true"
-            app:cardCornerRadius="8dp"
-            android:padding="12dp"
-            android:layout_marginTop="20dp">
+                </FrameLayout>
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="14dp">
+            </androidx.cardview.widget.CardView>
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="160dp"
-                    android:layout_gravity="center|top"
-                    android:src="@drawable/yourself_testing"
-                    android:contentDescription="@string/testing_fragment"/>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/test_yourself_card"
+                android:layout_width="260dp"
+                android:layout_height="230dp"
+                android:layout_below="@id/test_somebody_card"
+                android:layout_centerHorizontal="true"
+                app:cardCornerRadius="8dp"
+                android:padding="12dp"
+                android:layout_marginTop="20dp"
+                android:onClick="goToSelfTest"
+                android:layout_marginBottom="20dp">
 
-                <TextView
-                    android:id="@+id/test_yourself_text"
+                <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="@string/test_yourself_title"
-                    android:gravity="center|bottom"
-                    android:textColor="@color/titleColor"
-                    android:textSize="16sp"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
+                    android:padding="14dp">
 
-            </FrameLayout>
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="160dp"
+                        android:layout_gravity="center|top"
+                        android:src="@drawable/yourself_testing"
+                        android:contentDescription="@string/testing_fragment"/>
 
-        </androidx.cardview.widget.CardView>
+                    <TextView
+                        android:id="@+id/test_yourself_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="@string/test_yourself_title"
+                        android:gravity="center|bottom"
+                        android:textColor="@color/titleColor"
+                        android:textSize="16sp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
 
+                </FrameLayout>
+
+            </androidx.cardview.widget.CardView>
+        </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
