--- a/app/app/src/main/res/layout/fragment_camera.xml
+++ b/app/app/src/main/res/layout/fragment_camera.xml
@@ -16,6 +16,7 @@
   -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/camera_container"
     android:background="@android:color/black"
     android:layout_width="match_parent"
@@ -27,9 +28,9 @@
         android:layout_height="match_parent" />
 
     <com.example.avcapp.selfTesting.CustomView
-        android:layout_width="200dp"
-        android:layout_height="300dp"
         android:id="@+id/customView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
