--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="colorInformationOpacity">#80e57373</color>
     <color name="colorTestingAccent">#03a9f4</color>
     <color name="titleColor">#707a79</color>
+    <color name="titleColorLight">#D9FFFFFF</color>
     <color name="separatorColor">#cecece</color>
     <color name="textColor">#9e9e9e</color>
     <color name="backgroundColor">#FFFFFFFF</color>
